--- a/index.html
+++ b/index.html
@@ -47,9 +47,7 @@
           career journey as a Front-End Developer. My knowledge of HTML, CSS, JavaScript, and React JS allows me to
           craft immersive and user-friendly web experiences. I also possess advanced analytical skills in Excel and
           VBA,enabling me to streamline processes and automate repetitive manual tasks.</p><br />
-        <p>Currently living in New Jersey, I am preparing for a relocation to Asheville, NC in October. Whether
-          contributing to a software development team or using my analytical skills in data-driven projects, I am
-          committed to delivering high-quality solutions that drive business growth and user satisfaction.</p><br />
+        <p>Whether contributing to a software development team or using my analytical skills in data-driven projects, I am committed to delivering high-quality solutions that drive business growth and user satisfaction.</p><br />
         <p>I am seeking a position where I can apply my technical skills and problem-solving abilities. Let's connect
           and explore how I can contribute to the success of your team.</p>
       </div>
